parent 23a25a5c27cc8dde80adc79cb4ed59ab8b9fa493 author Jan Brauer <jan.brauer@superluminar.io> 1661982436 +0200 committer Manuel Vogel <mavogel@posteo.de> 1676646503 +0100
chore: parent 23a25a5c27cc8dde80adc79cb4ed59ab8b9fa493
author Jan Brauer <jan.brauer@superluminar.io> 1661982436 +0200
committer Manuel Vogel <mavogel@posteo.de> 1676643495 +0100

done

ci: fail fast (#368)

* ci: only run codebuild on successful pr validation

* ci: disable commit hook for integration tests

* ci: adjust test project name

* ci: remove webhook from codebuild

* fix: pipeline permissions

* fix: really pipeline permissions

* fix: really really pipeline permissions

* ci: log commands

* ci: quick fix hardcode env vars

---------

Co-authored-by: Aleksa Perovic <aleksa.perovic1@gmail.com>

fix: use aws cli v2 and remove conflicting boto3 dependency

fix: fix-missing-boto-in-tests

use aws cli v2 and remove conflicting boto3 dependency

fix: fix-missing-boto-in-tests

ci: add priviliged mode for docker to pipeline

ci: use GitHub OIDC for AWS credentials (#371)

* feat: use OIDC for GH actions / AWS

* ci: use new IAM roles

* ci: pass env vars to codebuild

* ci: remove quick fix

docs: improve unclear CF template descriptions. (#338)

* docs: Improve unclear CF template descriptions.
* docs: Move technical FAQ to Readme.
* docs: Update links to correct FAQ.

feat: Rewrite superwerker using CDK (#332)

* First CDK draft

The config files have been created via projen and it's eject feature.

* Fix indentation of description

* Port parameters of SuperwerkerStack

* Latest version of cdk

* Budget stack, and ignore quickstart stuff

* wip

* refactor email address generation for cdk upgrade path

* move files

* wip

* publish assets script

* Shell out instead of lib usage

* add github action for synth&publish

* set session name

* set session permission

* show identity

* Remove dead files

* fix tsconfig

* Clean up

* buildspec cdk hac

* Update codebuild linux container

* a

--- a/cdk/.eslintrc.json
+++ b/cdk/.eslintrc.json
@@ -145,7 +145,8 @@
       {
         "devDependencies": [
           "**/test/**",
-          "**/build-tools/**"
+          "**/build-tools/**",
+          "**/scripts/**"
         ],
         "optionalDependencies": false,
         "peerDependencies": true
