--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,27 +1,41 @@
 {
   "name": "superwerker-cdk-poc",
+  "scripts": {
+    "synth": "cdk synth",
+    "test": "jest",
+    "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts"
+  },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/node": "^14",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.39.1",
-    "esbuild": "^0.15.6",
-    "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^3.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^29.0.1",
-    "jest-junit": "^13",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@types/async-retry": "^1.4.5",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "aws-cdk": "^2.61.0",
+    "esbuild": "^0.17.3",
+    "eslint": "^8.32.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.3.1",
+    "jest-junit": "^15.0.0",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^15",
-    "ts-jest": "^28.0.8",
+    "npm-check-updates": "^16.6.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.39.1",
-    "constructs": "^10.0.5"
+    "@aws-cdk/aws-lambda-python-alpha": "^2.61.1-alpha.0",
+    "@types/aws-lambda": "^8.10.109",
+    "async-retry": "^1.3.3",
+    "aws-cdk-lib": "^2.61.0",
+    "aws-sdk": "^2.1297.0",
+    "cdk-assets": "^2.61.0",
+    "constructs": "^10.1.224",
+    "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
