--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -46,13 +46,15 @@ Resources:
   BuildAndTestProject:
     Type: AWS::CodeBuild::Project
     Properties:
+      Name: build-pull-request
       TimeoutInMinutes: 180
       BuildBatchConfig:
         ServiceRole: !GetAtt BuildAndTestProjectRole.Arn
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
         Type: LINUX_CONTAINER
+        PrivilegedMode: true
         EnvironmentVariables:
           - Name: ROOT_MAIL_DOMAIN
             Value: !Ref RootMailDomain
@@ -71,21 +73,6 @@ Resources:
         Type: GITHUB
         Location: https://github.com/superwerker/superwerker.git
         BuildSpec: tests/buildspec.yaml
-      Triggers:
-        BuildType: BUILD_BATCH
-        Webhook: true
-        FilterGroups:
-        - - Type: EVENT
-            Pattern: PULL_REQUEST_CREATED,PULL_REQUEST_UPDATED
-          - Type: COMMIT_MESSAGE
-            Pattern: !Ref SkipBuildCommitMessageRegExp
-            ExcludeMatchedPattern: true
-          - Type: ACTOR_ACCOUNT_ID
-            Pattern: !Sub
-              - ^(${AllowedGitHubAccountIDsRegExp})$
-              - AllowedGitHubAccountIDsRegExp: !Join
-                - "|"
-                - !Ref AllowedGitHubAccountIDs
       Visibility: PUBLIC_READ
       ResourceAccessRole: !GetAtt PublicReadRole.Arn
       LogsConfig:
@@ -99,7 +86,7 @@ Resources:
       TimeoutInMinutes: 20
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
         Type: LINUX_CONTAINER
         EnvironmentVariables:
           - Name: CAPTCHA_API_KEY
