--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,11 +1,14 @@
 {
   "name": "superwerker-cdk-poc",
+  "scripts": {
+    "synth": "cdk synth"
+  },
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.39.1",
+    "aws-cdk": "^2.40.0",
     "esbuild": "^0.15.6",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -20,7 +23,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.39.1",
+    "aws-cdk-lib": "^2.40.0",
     "constructs": "^10.0.5"
   },
   "license": "Apache-2.0",
