--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -27,7 +27,8 @@
     "target": "ES2019"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "cdk.out"
