refactor email address generation for cdk upgrade path

--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -28,7 +28,8 @@
   },
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts"
+    "test/**/*.ts",
+    "functions/**/*.ts",
   ],
   "exclude": [
     "cdk.out"
