--- a/cdk/package.json
+++ b/cdk/package.json
@@ -6,7 +6,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
-    "@types/node": "^14",
+    "@types/node": "^18.7.14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2.40.0",
@@ -24,8 +24,11 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.102",
     "aws-cdk-lib": "^2.40.0",
-    "constructs": "^10.0.5"
+    "aws-sdk": "^2.1207.0",
+    "constructs": "^10.0.5",
+    "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
