--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
@@ -35,6 +35,9 @@ jobs:
           aws-region: eu-central-1
           role-to-assume: arn:aws:iam::824014778649:role/superwerker-github
           role-session-name: branch-${{ steps.extract_branch.outputs.branch }}
+
+      - name: Print assumed role
+        run: aws sts get-caller-identity
 
       - name: Yarn
         run: |
