--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -28,8 +28,7 @@
   },
   "include": [
     "src/**/*.ts",
-    "test/**/*.ts",
-    "functions/**/*.ts",
+    "test/**/*.ts"
   ],
   "exclude": [
     "cdk.out"
