--- a/cdk/package.json
+++ b/cdk/package.json
@@ -25,11 +25,15 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^1.2.1",
+    "@middy/core": "^3.3.0",
     "@types/aws-lambda": "^8.10.102",
+    "@types/cfn-response": "^1.0.5",
     "aws-cdk-lib": "^2.40.0",
     "aws-sdk": "^2.1207.0",
-    "constructs": "^10.0.5",
     "cdk-assets": "^2.40.0",
+    "cfn-response": "^1.0.1",
+    "constructs": "^10.0.5",
     "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
