--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -80,6 +80,8 @@ phases:
       - AWS_REGION=${SUPERWERKER_REGION} AWS_DEFAULT_REGION=${SUPERWERKER_REGION} AWS_PROFILE=test_account ACCOUNT_FACTORY_ACCOUNT_ID=$(aws --profile test_account_iam_user_access --region ${SUPERWERKER_REGION} cloudformation describe-stacks --stack-name superwerker-pipeline-account-factory-fixture --query "Stacks[0].Outputs[?OutputKey=='AccountId'].OutputValue" --output text) python3 -m pytest --junitxml=./test-results.xml
 
     finally:
+      # debug why deployment of stack fails in test infra
+      - aws cloudformation describe-stack-events --stack-name superwerker-pipeline-account-factory-wiring
       # remove temp IAM user
       - aws --profile test_account iam delete-access-key --user-name superwerker-tests --access-key-id "${SUPERWERKER_AWS_ACCESS_KEY_ID}" || true
       - aws --profile test_account iam detach-user-policy --user-name superwerker-tests --policy-arn arn:aws:iam::aws:policy/AdministratorAccess || true
