--- a/cdk/package.json
+++ b/cdk/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.51.1-alpha.0",
     "@aws-lambda-powertools/logger": "^1.2.1",
     "@middy/core": "^3.3.0",
     "@types/aws-lambda": "^8.10.102",
