--- a/templates/notifications.yaml
+++ b/templates/notifications.yaml
@@ -57,9 +57,10 @@ Resources:
         client = boto3.client('sns')
 
         def handler(event, context):
-          id = event['detail']['responseElements']['opsItemId']
-          desc = event['detail']['requestParameters']['description']
-          title = event['detail']['requestParameters']['title']
+          id = event['detail']['responseElements']['OpsItemId']
+          request_parameters = event['detail']['requestParameters']
+          desc = request_parameters.get('Description', request_parameters.get('description'))
+          title = request_parameters.get('Title', request_parameters.get('title'))
 
           url = "https://${AWS::Region}.console.aws.amazon.com/systems-manager/opsitems/{}".format(id)
 
