--- a/templates/notifications.yaml
+++ b/templates/notifications.yaml
@@ -57,7 +57,8 @@ Resources:
         client = boto3.client('sns')
 
         def handler(event, context):
-          id = event['detail']['responseElements']['OpsItemId']
+          response_elements = event['detail']['responseElements']
+          id = responseElements.get('OpsItemId', responseElements.get('opsItemId')) 
           request_parameters = event['detail']['requestParameters']
           desc = request_parameters.get('Description', request_parameters.get('description'))
           title = request_parameters.get('Title', request_parameters.get('title'))
