--- a/templates/notifications.yaml
+++ b/templates/notifications.yaml
@@ -62,6 +62,7 @@ Resources:
           request_parameters = event['detail']['requestParameters']
           desc = request_parameters.get('Description', request_parameters.get('description'))
           title = request_parameters.get('Title', request_parameters.get('title'))
+          assert id and title and desc
 
           url = "https://${AWS::Region}.console.aws.amazon.com/systems-manager/opsitems/{}".format(id)
 
