feat: superwerker now in CDK
commit 6306d543cd043603db8d32b3077f9619ff5f6d7e
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Fri Nov 25 11:32:04 2022 +0100

    Convert JSON template to yaml when publishing

commit 20918c9aa88a94510c3f1859f1abc19e5502b170
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Tue Oct 4 08:35:30 2022 +0200

    Hardcode region list

    List has beeen created with scripts/ct+sso.sh

commit e2ddd0e879fba0c2bae396b28175886b9c9f762f
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Fri Sep 30 12:18:02 2022 +0200

    Release process

commit e695dcd1023004bc0203a42e5523406ac40e2f35
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Fri Sep 30 11:14:03 2022 +0200

    Give release user access to assets buckets

commit 4f0eb65a06dd58412e016db721f55bbbc53e8aa0
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Fri Sep 30 10:48:37 2022 +0200

    Prepare deployment for future release process

commit 8bddae72dc5b2fbf9203df633a36ca6b9a7d3b3b
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Thu Sep 15 14:42:02 2022 +0200

    Use CDK project in setup-test-env script

commit b7a183e7cebac2551f4364c0a56b394610555953
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Mon Sep 12 10:25:29 2022 +0200

    Disable asset bundling while testing

commit f5c2f8c7914e424424c61ec278165c5e062603cb
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Sat Sep 10 14:56:27 2022 +0200

    Allow to pass SUPERWERKER_VERSION as env var

commit f17c771f13829b5ebcdb7e034fdea6a415aec09b
Author: Robert von Massow <11364448+skomp@users.noreply.github.com>
Date:   Sun Sep 11 16:56:59 2022 +0200

    Migrate guardduty stack to cdk (#335)

commit 0f6127980fa94a4771f05092ed8edbdcb51413db
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Mon Sep 5 23:18:37 2022 +0200

    Remove failing GH action

commit 1fced5ff7a5c331e6c4e08d69aeb00577a88a4fe
Author: Jan Brauer <jan.brauer@superluminar.io>
Date:   Mon Sep 5 21:41:56 2022 +0200


--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
-
-name: Release
+name: CDK release
 
 on:
   workflow_dispatch: {}
@@ -19,63 +18,26 @@ jobs:
         extra_plugins: |
           @semantic-release/git
           @semantic-release/changelog
+        branches: |
+          ['v+([0-9])?(.{+([0-9]),x}).x', 'main', {name: 'cdk-migration', prerelease: true}]
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Version the templates
-      run: scripts/versioning.sh ${{ steps.semantic.outputs.new_release_version }}
-
-    - uses: shallwefootball/s3-upload-action@master
-      name: Upload S3
-      id: S3
+    - name: cdk release
       if: steps.semantic.outputs.new_release_published == 'true'
-      with:
-        aws_key_id: ${{ secrets.RELEASES_AWS_ACCESS_KEY }}
-        aws_secret_access_key: ${{ secrets.RELEASES_AWS_SECRET_ACCESS_KEY}}
-        aws_bucket: ${{ secrets.RELEASES_AWS_BUCKET_NAME}}
-        source_dir: templates/
-        destination_dir: ${{ steps.semantic.outputs.new_release_version }}/templates/
+      run: |
+        pip install cfn-flip
+        yarn
+        yarn test
+        yarn synth
+        yarn publish-assets
+        cfn-flip cdk.out/SuperwerkerStack.template.json cdk.out/superwerker.template.yaml
+        aws s3 cp cdk.out/superwerker.template.yaml s3://superwerker-releases/${SUPERWERKER_VERSION}/templates/
+        aws s3 cp cdk.out/SuperwerkerStack.template.json s3://superwerker-releases/${SUPERWERKER_VERSION}/templates/
+      env:
+        SUPERWERKER_VERSION: ${{ steps.semantic.outputs.new_release_version }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.RELEASES_AWS_ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.RELEASES_AWS_SECRET_ACCESS_KEY }}
+      shell: bash
+      working-directory: cdk
 
-    - name: Clone superwerker-quickstart
-      run: git clone https://superwerker-bot:${{ secrets.BOT_ACCESS_TOKEN }}@github.com/superwerker/quickstart-superwerker.git quickstart-superwerker
-  
-    - name: Configure Git, email
-      run: git config --global user.email "services+github-superwerker-bot@superluminar.io"
-  
-    - name: Configure Git, name
-      run: git config --global user.name "superwerker-bot"
-  
-    - name: sync main branch of fork with upstream
-      run: |
-        cd quickstart-superwerker \
-          && git remote add upstream https://superwerker-bot:${{ secrets.BOT_ACCESS_TOKEN }}@github.com/aws-quickstart/quickstart-superwerker.git \
-          && git fetch upstream \
-          && git reset --hard upstream/main \
-          && git push origin main
-  
-    - name: Create a new branch for the release
-      run: 'cd quickstart-superwerker && git checkout -b release/${{ steps.semantic.outputs.new_release_version }}'
-  
-    - name: Remove existing CloudFormation templates
-      run: rm -rf quickstart-superwerker/templates
-  
-    - name: Copy CloudFormation templates
-      run: cp -a templates quickstart-superwerker/
-  
-    - name: List files
-      run: ls -ahl quickstart-superwerker/templates
-  
-    - name: Create commit
-      run: 'cd quickstart-superwerker && git add templates && git commit -m "release: ${{ steps.semantic.outputs.new_release_version }}"'
-  
-    - name: Push to repository
-      run: 'cd quickstart-superwerker && git push -u origin release/${{ steps.semantic.outputs.new_release_version }}'
-  
-    - name: Create Pull Request
-      run: |
-        curl \
-          -X POST \
-          -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token ${{ secrets.BOT_ACCESS_TOKEN }}" \
-          https://api.github.com/repos/aws-quickstart/quickstart-superwerker/pulls \
-          -d '{"head":"superwerker:release/${{ steps.semantic.outputs.new_release_version }}", "base":"main", "title": "release: ${{ steps.semantic.outputs.new_release_version }}", "body": "Hey @davmayd @troy-ameigh, please take a look at the most recent release:\n\nhttps://github.com/superwerker/superwerker/releases/tag/v${{ steps.semantic.outputs.new_release_version }}"}'
