--- a/cdk/package.json
+++ b/cdk/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.61.1-alpha.0",
     "@types/aws-lambda": "^8.10.109",
     "aws-cdk-lib": "^2.61.0",
     "aws-sdk": "^2.1297.0",
