feat: commit linting

--- a/.releaserc
+++ b/.releaserc
@@ -11,6 +11,11 @@
     ],
     [
       "@semantic-release/github"
-    ]
+    ],
+    [
+    "@semantic-release/commit-analyzer", 
+    {
+      "preset": "conventionalcommits"
+    }
   ]
 }
