fix: Add working dir for PR validation action

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -19,3 +19,4 @@ jobs:
         run: |
           npm install
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+        working-directory: cdk
