--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -9,18 +9,22 @@ on:
 jobs:
   pr-conventions:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != dependabot[bot] }}
+    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+      - name: set up node
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-      - uses: deepakputhraya/action-pr-title@master
+      - name: check PR title
+        uses: deepakputhraya/action-pr-title@master
         with:
           allowed_prefixes: 'build,chore,ci,docs,feat,fix,perf,refactor,revert,style,test'
-      - run: |
+      - name: check commit messages
+        run: |
           npm install
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
         working-directory: cdk
