feat: Rewrite superwerker using CDK (#332)
* First CDK draft

The config files have been created via projen and it's eject feature.

* Fix indentation of description

* Port parameters of SuperwerkerStack

* Latest version of cdk

* Budget stack, and ignore quickstart stuff

* wip

* refactor email address generation for cdk upgrade path

* move files

* wip

* publish assets script

* Shell out instead of lib usage

* add github action for synth&publish

* set session name

* set session permission

* show identity

* Remove dead files

* fix tsconfig

* Clean up

* buildspec cdk hac

* Update codebuild linux container

* add back parameters for cdk to work

* Restructure to better see what's going on

* Service name must be capitalized

Received response status [FAILED] from custom resource. Message returned: Service lambda does not exist in AWS SDK version 2.1209.0. (RequestId: c34a19c2-f8b7-4ca5-820e-1ace932aeba8)

* Arguments passed to lambda:Invoke must be string

* Fix IAM policy for custom resource

* Handle case where account is not in organization yet

{
    "errorType": "AWSOrganizationsNotInUseException",
    "errorMessage": "Your account is not a member of an organization.",
    "code": "AWSOrganizationsNotInUseException",
    "message": "Your account is not a member of an organization.",
    "time": "2022-09-02T22:43:42.092Z",
    "requestId": "7e8604bc-ad76-4ee2-944b-fb9d25c98556",
    "statusCode": 400,
    "retryable": false,
    "retryDelay": 63.83174057769199,
    "stack": [
        "AWSOrganizationsNotInUseException: Your account is not a member of an organization.",
        "    at Request.extractError (/var/runtime/node_modules/aws-sdk/lib/protocol/json.js:52:27)",
        "    at Request.callListeners (/var/runtime/node_modules/aws-sdk/lib/sequential_executor.js:106:20)",
        "    at Request.emit (/var/runtime/node_modules/aws-sdk/lib/sequential_executor.js:78:10)",
   

--- a/.releaserc
+++ b/.releaserc
@@ -5,12 +5,17 @@
       "@semantic-release/release-notes-generator",
       {
         "writerOpts": {
-          "mainTemplate": "{{> header}}\n\n- [View template](https://superwerker-releases.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml)\n- [Quick install](https://console.aws.amazon.com/cloudformation/home#/stacks/quickcreate?stackName=superwerker&templateURL=https://superwerker-releases.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml&param_QSS3BucketName=superwerker-releases&param_QSS3BucketRegion=eu-west-1&param_QSS3KeyPrefix={{version}}/)\n- [Update instructions](https://github.com/superwerker/superwerker#how-do-i-receive-updates)\n\n{{#each commitGroups}}\n\n{{#if title}}\n### {{title}}\n\n{{/if}}\n{{#each commits}}\n{{> commit root=@root}}\n{{/each}}\n{{/each}}\n\n{{> footer}}\n"
+          "mainTemplate": "{{> header}}\n\n- [View template](https://superwerker-releases.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml)\n- [Quick install](https://console.aws.amazon.com/cloudformation/home#/stacks/quickcreate?stackName=superwerker&templateURL=https://superwerker-releases.s3.amazonaws.com/{{version}}/templates/superwerker.template.yaml)\n- [Update instructions](https://github.com/superwerker/superwerker#how-do-i-receive-updates)\n\n{{#each commitGroups}}\n\n{{#if title}}\n### {{title}}\n\n{{/if}}\n{{#each commits}}\n{{> commit root=@root}}\n{{/each}}\n{{/each}}\n\n{{> footer}}\n"
         }
       }
     ],
     [
       "@semantic-release/github"
-    ]
+    ],
+    [
+    "@semantic-release/commit-analyzer", 
+    {
+      "preset": "conventionalcommits"
+    }
   ]
 }
