--- a/tests/build.yaml
+++ b/tests/build.yaml
@@ -53,6 +53,7 @@ Resources:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
         Type: LINUX_CONTAINER
+        PrivilegedMode: true
         EnvironmentVariables:
           - Name: ROOT_MAIL_DOMAIN
             Value: !Ref RootMailDomain
