--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -17,8 +17,10 @@ phases:
   build:
     commands:
       # vend fresh account/org
+      - python -m venv .venv
+      - . .venv/bin/activate
       - pip3 install -r tests/requirements.txt
-      - pip3 install awscli --upgrade
+      - export PATH=/usr/local/bin:${PATH}
       - curl --version
       - aws --version
       - ovm_result=$(curl --fail --retry 10 -s ${ORGANIZATIONS_VENDING_MACHINE_ENDPOINT})
