chore(ci): only test in one region for not consuming so many aws accs
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -8,9 +8,9 @@ batch:
         variables:
           SUPERWERKER_REGION:
             - eu-west-1
-            - eu-central-1
+            #- eu-central-1
           UPDATE_FROM_LATEST_RELEASE:
-            - true
+            #- true
             - false
 
 phases:
