--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -10,7 +10,7 @@ batch:
             - eu-west-1
             #- eu-central-1
           UPDATE_FROM_LATEST_RELEASE:
-            #- true
+            - true
             - false
 
 phases:
@@ -112,8 +112,8 @@ phases:
       - aws --profile test_account iam delete-user --user-name superwerker-tests || true
 
       # call sub-account closing and stack cleanup
-      #- |
-      #  aws stepfunctions start-execution  --state-machine-arn ${SUPERWERKER_CLEANUP_STATE_MACHINE} --input '{"AWS_CROSS_ACCOUNT_ROLE_ARN": "'"${aws_cross_account_role_arn}"'", "AWS_ACCOUNT_ID": "'"${aws_account_id}"'", "SUPERWERKER_REGION": "'"${SUPERWERKER_REGION}"'"}'
+      - |
+        aws stepfunctions start-execution  --state-machine-arn ${SUPERWERKER_CLEANUP_STATE_MACHINE} --input '{"AWS_CROSS_ACCOUNT_ROLE_ARN": "'"${aws_cross_account_role_arn}"'", "AWS_ACCOUNT_ID": "'"${aws_account_id}"'", "SUPERWERKER_REGION": "'"${SUPERWERKER_REGION}"'"}'
 
 reports:
   pytest_reports:
