--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -8,7 +8,7 @@ batch:
         variables:
           SUPERWERKER_REGION:
             - eu-west-1
-            #- eu-central-1
+            - eu-central-1
           UPDATE_FROM_LATEST_RELEASE:
             - true
             - false
