--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@types/async-retry": "^1.4.5",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -27,7 +28,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.61.1-alpha.0",
     "@types/aws-lambda": "^8.10.109",
+    "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.61.0",
     "aws-sdk": "^2.1297.0",
     "cdk-assets": "^2.61.0",
